simple changer done

--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
                 <li id="answer4"></li>
                 <li id="answer5"></li>
             </ul>
+            <input type="submit" id="next" value="Następne">
         </div>
     </div>
+    
     <script src="js/js.js">
     </script>
 </body>
