--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
             </ul>
             <input type="submit" id="next" value="Następne">
         </div>
+        <p id="number"></p>
+        <input type="submit" id="nextnumber" value="Następna liczba">
     </div>
     
     <script src="js/js.js">
