--- a/index.html
+++ b/index.html
@@ -19,10 +19,13 @@
                 <li id="answer4"></li>
                 <li id="answer5"></li>
             </ul>
-            <input type="submit" id="next" value="Następne">
+            <input type="submit" id="next" value="Następne"><br>
+            <input type="submit" id="loadInfo" value="Info">
+            <p id="info">Klikając info zobaczysz tutaj opracowanie pytania.</p>
         </div>
-        <p id="number"></p>
-        <input type="submit" id="nextnumber" value="Następna liczba">
+        
+        <!-- <p id="number"></p>
+        <input type="submit" id="nextnumber" value="Następna liczba"> -->
     </div>
     
     <script src="js/js.js">
