--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <li id="answer4"></li>
                 <li id="answer5"></li>
             </ul>
+            <input type="submit" id="prev" value="Poprzednie">
             <input type="submit" id="next" value="Następne"><br>
             <input type="submit" id="loadInfo" value="Info">
             <p id="info">Klikając info zobaczysz tutaj opracowanie pytania.</p>
