--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lora|Slabo+27px" rel="stylesheet">
     <title>mnemomed</title>
 </head>
 <body>
@@ -26,11 +27,7 @@
             <input type="submit" id="loadInfo" value="Info">
             <p id="info">Klikając info zobaczysz tutaj opracowanie pytania.</p>
         </div>
-        
-        <!-- <p id="number"></p>
-        <input type="submit" id="nextnumber" value="Następna liczba"> -->
-    </div>
-    
+    </div>  
     <script src="js/js.js">
     </script>
 </body>
