adding counter of good answers

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div class="container">
         <h1>MNEMOMED</h1>
         <div class="modal">
+            <p id="punkty">Twoje punkty: 0/0</p>
             <p id="problem">
             </p>
             <ul>
@@ -29,6 +30,7 @@
             <p id="info">Klikając info zobaczysz tutaj opracowanie pytania.</p>
         </div>
     </div>  
+    <footer><div class="copyr"> &copy; P.K. i A.M. 2018 </div></footer>
     
     <script src="js/js.js">
     </script>
