loading from JSON works

--- a/informacje.html
+++ b/informacje.html
@@ -13,22 +13,7 @@
 
     <div class="container">
         <h1>MNEMOMED</h1>
-        <!-- <div class="modal">
-            <p id="punkty">Twoje punkty: 0/0</p>
-            <p id="problem">
-            </p>
-            <ul>
-                <li id="answer1"></li>
-                <li id="answer2"></li>
-                <li id="answer3"></li>
-                <li id="answer4"></li>
-                <li id="answer5"></li>
-            </ul>
-            <input type="submit" id="prev" value="Poprzednie">
-            <input type="submit" id="next" value="Następne"><br>
-            <input type="submit" id="loadInfo" value="Info">
-            <p id="info">Klikając info zobaczysz tutaj opracowanie pytania.</p>
-        </div> -->
+
         <nav>
             <ul>
                 <li class="menu"><a href="pytania.html">Pytania</a></li>
@@ -36,6 +21,9 @@
                 <li class="menu"><a href="kontakt.html">Kontakt</a></li>
             </ul>
         </nav>
+        <div>
+            Informacje o projekcie. 
+        </div>
     </div>  
     <footer><div class="copyr"> &copy; P.K. i A.M. 2018 </div></footer>
     
