--- a/modal.html
+++ b/modal.html
@@ -13,7 +13,14 @@
 
     <div class="container">
         <h1>MNEMOMED</h1>
-        <!-- <div class="modal">
+        <nav>
+            <ul>
+                <li class="menu"><a href="pytania.html">Pytania</a></li>
+                <li class="menu"><a href="informacje.html">Informacje</a></li>
+                <li class="menu"><a href="kontakt.html">Kontakt</a></li>
+            </ul>
+        </nav>
+         <div class="modal">
             <p id="punkty">Twoje punkty: 0/0</p>
             <p id="problem">
             </p>
@@ -28,14 +35,7 @@
             <input type="submit" id="next" value="Następne"><br>
             <input type="submit" id="loadInfo" value="Info">
             <p id="info">Klikając info zobaczysz tutaj opracowanie pytania.</p>
-        </div> -->
-        <nav>
-            <ul>
-                <li class="menu"><a href="pytania.html">Pytania</a></li>
-                <li class="menu"><a href="informacje.html">Informacje</a></li>
-                <li class="menu"><a href="kontakt.html">Kontakt</a></li>
-            </ul>
-        </nav>
+        </div>
     </div>  
     <footer><div class="copyr"> &copy; P.K. i A.M. 2018 </div></footer>
     
