--- a/kontakt.html
+++ b/kontakt.html
@@ -21,10 +21,9 @@
             </ul>
         </nav>
 
-        <div>
+        <div class="contact">
             Mail: 1234@123.123
             Telefon: 123456
-
         </div>
 
     </div>  
