choose change work

--- a/pytania.html
+++ b/pytania.html
@@ -20,13 +20,13 @@
                 <li class="menu"><a href="kontakt.html">Kontakt</a></li>
             </ul>
         </nav>
-        <!-- <div>
+        <div class="chose">
             <ul>
-                <li>Medycyna Ratunkowa</li>
-                <li>Kardiologia</li>
-                <li>Chirurgia</li>
+                <li id="ratunkowa">Medycyna Ratunkowa</li>
+                <li id="interna">Kardiologia</li>
+                <li id="chirurgia">Chirurgia</li>
             </ul>
-        </div> -->
+        </div>
         <!-- <button id="ajax">Ajax</button> -->
         <div class="modal">
             <p id="punkty">Twoje punkty: 0/0</p>
