--- a/kontakt.html
+++ b/kontakt.html
@@ -29,7 +29,7 @@
     </div>  
     <footer><div class="copyr"> &copy; P.K. i A.M. 2018 </div></footer>
     
-    <script src="js/js.js">
+    <!-- <script src="js/js.js"> -->
     </script>
 </body>
 </html>
