testing json on gh-pages

--- a/pytania.html
+++ b/pytania.html
@@ -28,6 +28,7 @@
             </ul>
         </div>
         <!-- <button id="ajax">Ajax</button> -->
+        <div class="output"></div>
         <div class="modal">
             <p id="punkty">Twoje punkty: 0/0</p>
             <p id="problem">
