refacor, json works

--- a/kontakt.html
+++ b/kontakt.html
@@ -12,7 +12,7 @@
 <body>
 
     <div class="container">
-        <h1>MNEMOMED</h1>
+        <h1>MNEMOMED 2.0</h1>
         <nav>
             <ul>
                 <li class="menu"><a href="pytania.html">Pytania</a></li>
