--- a/index.html
+++ b/index.html
@@ -7,23 +7,57 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lora|Slabo+27px" rel="stylesheet">
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
+
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+            
     <title>mnemomed</title>
 </head>
 <body>
 
     <div class="container">
-        <h1>MNEMOMED 2.0</h1>
         <nav>
-            <ul>
-                <li class="menu"><a href="pytania.html">Pytania</a></li>
-                <li class="menu"><a href="informacje.html">Informacje</a></li>
-                <li class="menu"><a href="kontakt.html">Kontakt</a></li>
-            </ul>
+            <div class="nav-wrapper">
+                <a href="index.html" class="brand-logo"><hr> MNEMOMED</a>
+                <ul id="nav-mobile" class="right hide-on-med-and-down">
+                <li><a href="pytania.html">Pytania</a></li>
+                <li><a href="informacje.html">Informacje</a></li>
+                <li><a href="kontakt.html">Kontakt</a></li>
+                </ul>
+            </div>
         </nav>
+
+        <div class="row">
+            <div class="col s12 m6">
+                <div class="card blue-grey darken-1">
+                <div class="card-content white-text">
+                    <span class="card-title white-text bold-text">Witamy na MNEMOMED!</span>
+                    <span class="white-text">
+                    Znajdziecie tu medyczne testy. W przyszłości będą tutaj rownież drzewka decyzyjne. <br><br>
+                    Życzymy powodzenia w rozwiązywaniu testow!</span>
+                </div>
+                </div>
+            </div>
+            </div>
+
+
+        <!-- OLD NAVBAR
+            <h1>MNEMOMED 2.0</h1>
+            <nav>
+                <ul>
+                    <li class="menu"><a href="pytania.html">Pytania</a></li>
+                    <li class="menu"><a href="informacje.html">Informacje</a></li>
+                    <li class="menu"><a href="kontakt.html">Kontakt</a></li>
+                </ul>
+            </nav>
+         -->
     </div>  
-    <footer><div class="copyr"> &copy; P.K. i A.M. 2018 </div></footer>
+    <footer class="page-footer"><div class="white-text"> &copy; P.K. i A.M. 2018 </div></footer>
     
-    <!-- <script src="js/js.js"> -->
-    </script>
+    <!-- <script src="js/js.js">
+    </script> -->
 </body>
 </html>
