--- a/pytania.html
+++ b/pytania.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 
-    <div class="container">
+    <div class="container containerA">
         <nav>
             <div class="nav-wrapper">
                 <a href="index.html" class="brand-logo">MNEMOMED</a>
@@ -77,7 +77,7 @@
             <p id="info">Klikając info zobaczysz tutaj opracowanie pytania.</p>
         </div>
     </div>  
-    <footer class="page-footer"><div class="white-text"> &copy; P.K. i A.M. 2018 </div></footer>
+    <footer class="page-footer container"><div class="white-text"> &copy; P.K. i A.M. 2018 </div></footer>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
     <script src="js/js.js"></script>
