--- a/pytania.html
+++ b/pytania.html
@@ -45,7 +45,7 @@
         <div class="choose">
             <div class="collection">
                 <a href="#!" class="collection-item" id="ratunkowa">Medycyna Ratunkowa</a>
-                <a href="#!" class="collection-item" id="kardiologia">Kardiologia</a>
+                <a href="#!" class="collection-item" id="interna">Interna</a>
                 <a href="#!" class="collection-item" id="chirurgia">Chirurgia</a>
             </div>
         </div>
