--- a/pytania.html
+++ b/pytania.html
@@ -47,6 +47,7 @@
                 <a href="#!" class="collection-item" id="ratunkowa">Medycyna Ratunkowa</a>
                 <a href="#!" class="collection-item" id="interna">Interna</a>
                 <a href="#!" class="collection-item" id="chirurgia">Chirurgia</a>
+                <a href="#!" class="collection-item" id="ginekologia">Ginekologia</a>
             </div>
         </div>
         <!-- <div class="output"></div> -->
