--- a/pytania.html
+++ b/pytania.html
@@ -45,8 +45,8 @@
         <div class="choose">
             <div class="collection">
                 <a href="#!" class="collection-item" id="ratunkowa">Medycyna Ratunkowa</a>
-                <a href="#!" class="collection-item" id="interna">Interna</a>
-                <a href="#!" class="collection-item" id="chirurgia">Chirurgia</a>
+                <!-- <a href="#!" class="collection-item" id="interna">Interna</a>
+                <a href="#!" class="collection-item" id="chirurgia">Chirurgia</a> -->
                 <a href="#!" class="collection-item" id="ginekologia">Ginekologia</a>
             </div>
         </div>
