--- a/pytania.html
+++ b/pytania.html
@@ -62,14 +62,17 @@
                 <li id="answer4"></li><hr>
                 <li id="answer5"></li><hr>
             </ul>
-            <button class="btn waves-effect waves-light" type="submit" name="action" id="prev">
-                    <i class="material-icons arrow_back">arrow_back</i>
-            </button><button class="btn waves-effect waves-light" type="submit" name="action" id="next">
-                    <i class="material-icons arrow_forward">arrow_forward</i>
-            </button><br><br>
-            <button class="btn waves-effect waves-light" type="submit" name="action" id="loadInfo">Info
-                    <!-- <i class="material-icons right">send</i> -->
-            </button>
+            <div class="manipulating">
+                <button class="btn waves-effect waves-light" type="submit" name="action" id="prev">
+                        <i class="material-icons arrow_back">arrow_back</i>
+                </button>
+                <button class="btn waves-effect waves-light" type="submit" name="action" id="next">
+                        <i class="material-icons arrow_forward">arrow_forward</i>
+                </button><br><br>
+                <button class="btn waves-effect waves-light" type="submit" name="action" id="loadInfo">
+                    Info
+                </button>
+            </div>
 
             <!-- <input type="submit" id="prev" value="Poprzednie">
             <input type="submit" id="next" value="Następne"><br>
