reset button, add some questions

--- a/pytania.html
+++ b/pytania.html
@@ -43,7 +43,7 @@
         </div>
 
         <div class="abc">
-            <p id="punkty">Twoje punkty: 0/0</p>
+            <!-- <p id="punkty">Twoje punkty: 0/0</p> -->
             <p id="problem">
             </p>
             <ul>
@@ -60,6 +60,9 @@
                 </button>
                 <button class="btn waves-effect waves-light" type="submit" name="action" id="next">
                         <i class="material-icons arrow_forward">arrow_forward</i>
+                </button>
+                <button class="btn waves-effect waves-light" type="submit" name="action" id="reset">
+                    Resetuj odpowiedzi
                 </button><br><br>
                 <button class="btn waves-effect waves-light" type="submit" name="action" id="loadInfo">
                     Info
