--- a/pytania.html
+++ b/pytania.html
@@ -43,7 +43,7 @@
         </div>
 
         <div class="abc">
-            <!-- <p id="punkty">Twoje punkty: 0/0</p> -->
+            <p id="punkty">Twoje punkty: 0/0</p>
             <p id="problem">
             </p>
             <ul>
