index and contact up

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class="card-content white-text">
                     <span class="card-title white-text bold-text">Witamy na MNEMOMED!</span>
                     <span class="white-text">
-                    Znajdziecie tu medyczne testy. W przyszłości będą tutaj rownież drzewka decyzyjne. <br><br>
+                    Znajdziecie tu medyczne testy. <br><br>
                     Życzymy powodzenia w rozwiązywaniu testow!</span>
                 </div>
                 </div>
