--- a/kontakt.html
+++ b/kontakt.html
@@ -34,8 +34,7 @@
         </ul>
 
         <div class="contact">
-            Mail: 1234@123.123
-            Telefon: 123456
+            Mail: mnemomed@gmail.com
         </div>
 
     </div>  
