adding liczni.html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                 <ul class="right hide-on-med-and-down">
                 <li><a href="pytania.html">Pytania</a></li>
-                <li><a href="informacje.html">Informacje</a></li>
+                <li><a href="licznik.html">Licznik</a></li>
                 <li><a href="kontakt.html">Kontakt</a></li>
                 </ul>
             </div>
@@ -30,7 +30,7 @@
                 
         <ul class="sidenav" id="mobile-demo">
             <li><a href="pytania.html">Pytania</a></li>
-            <li><a href="informacje.html">Informacje</a></li>
+            <li><a href="licznik.html">Licznik</a></li>
             <li><a href="kontakt.html">Kontakt</a></li>
         </ul>
 
@@ -48,7 +48,7 @@
         </div>
 
     </div>  
-    <footer class="page-footer container"><div class="white-text"> &copy; P.K. i A.M. 2018 </div></footer>
+    <footer class="page-footer container"><div class="white-text"> &copy; mnemomed 2018 </div></footer>
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
     <!-- <script src="js/js.js"></script> -->
