counter works well

--- a/licznik.html
+++ b/licznik.html
@@ -39,10 +39,10 @@
 				<td colspan="4" id="counterDay">Do LEKu pozostało:</td>
 			</tr>
 			<tr class="counterNumbers">
-				<td id="days">120</td>
-				<td id="hours">4</td>
-				<td id="minutes">12</td>
-				<td id="seconds">22</td>
+				<td id="days"></td>
+				<td id="hours"></td>
+				<td id="minutes"></td>
+				<td id="seconds"></td>
 			</tr>
 			<tr class="counterSubtitles">
 				<td id="s1">Dni</td>
