--- a/pytania.html
+++ b/pytania.html
@@ -32,6 +32,12 @@
             <li><a href="licznik.html">Licznik</a></li>
             <li><a href="kontakt.html">Kontakt</a></li>
         </ul>
+
+        <div id="preloader-window" class="containerA">
+            <div class="progress">
+                    <div class="indeterminate"></div>
+            </div>
+        </div>
       
         <div class="choose">
             <div class="collection">
