simple pomodoro sketch

--- a/pytania.html
+++ b/pytania.html
@@ -22,6 +22,7 @@
                 <ul class="right hide-on-med-and-down">
                 <li><a href="pytania.html">Pytania</a></li>
                 <li><a href="licznik.html">Licznik</a></li>
+                <li><a href="pomodoro.html">Pomodoro</a></li>
                 <li><a href="kontakt.html">Kontakt</a></li>
                 </ul>
             </div>
@@ -30,6 +31,7 @@
         <ul class="sidenav" id="mobile-demo">
             <li><a href="pytania.html">Pytania</a></li>
             <li><a href="licznik.html">Licznik</a></li>
+            <li><a href="pomodoro.html">Pomodoro</a></li>     
             <li><a href="kontakt.html">Kontakt</a></li>
         </ul>
 
