--- a/pomodoro.html
+++ b/pomodoro.html
@@ -39,6 +39,8 @@
             Pomodoro
             <div id="pomodoroCounter">5</div>
             <button class="btn waves-effect waves-light" type="submit" name="pomodoro" id="pomodoroStart">Pomodoro</button>
+            <button class="btn waves-effect waves-light" type="submit" name="pomodoro" id="up5">+ 5</button>
+            <button class="btn waves-effect waves-light" type="submit" name="pomodoro" id="down5">- 5</button>
         </div>
 
     </div>  
