--- a/pomodoro.html
+++ b/pomodoro.html
@@ -10,6 +10,7 @@
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
     <title>mnemomed</title>
 </head>
 <body>
@@ -36,11 +37,12 @@
         </ul>
 
         <div class="pomodoroSection">
-            Pomodoro
-            <div id="pomodoroCounter">5</div>
+            
+            <div id="pomodoroText">Witaj w Pomodoro!</div><br>
+            <div id="pomodoroCounter">30</div> <br>
             <button class="btn waves-effect waves-light" type="submit" name="pomodoro" id="pomodoroStart">Pomodoro</button>
-            <button class="btn waves-effect waves-light" type="submit" name="pomodoro" id="up5">+ 5</button>
-            <button class="btn waves-effect waves-light" type="submit" name="pomodoro" id="down5">- 5</button>
+            <button class="btn waves-effect waves-light" type="submit" name="pomodoro" id="up5">+ 5 min</button>
+            <button class="btn waves-effect waves-light" type="submit" name="pomodoro" id="down5">- 5 min</button>
         </div>
 
     </div>  
