--- a/pomodoro.html
+++ b/pomodoro.html
@@ -43,6 +43,7 @@
             <button class="btn waves-effect waves-light" type="submit" name="pomodoro" id="pomodoroStart">Pomodoro</button>
             <button class="btn waves-effect waves-light" type="submit" name="pomodoro" id="up5">+ 5 min</button>
             <button class="btn waves-effect waves-light" type="submit" name="pomodoro" id="down5">- 5 min</button>
+            <button class="btn waves-effect waves-light" type="submit" name="pomodoro" id="pomodoroPause">Pauza</button>
         </div>
 
     </div>  
