--- a/kontakt.html
+++ b/kontakt.html
@@ -36,7 +36,8 @@
         </ul>
 
         <div class="contact">
-            Mail: mnemomed@gmail.com
+            <a href="mailto:adres e-mail">mnemomed@gmail.com</a>
+            
         </div>
 
     </div>  
