--- a/pomodoro.html
+++ b/pomodoro.html
@@ -36,14 +36,13 @@
             <li><a href="kontakt.html">Kontakt</a></li>
         </ul>
 
-        <div class="pomodoroSection">
-            
+        <div class="pomodoroSection">   
             <div id="pomodoroText">Witaj w Pomodoro!</div><br>
             <div id="pomodoroCounter">30</div> <br>
             <button class="btn waves-effect waves-light" type="submit" name="pomodoro" id="pomodoroStart">Pomodoro</button>
             <button class="btn waves-effect waves-light" type="submit" name="pomodoro" id="up5">+ 5 min</button>
             <button class="btn waves-effect waves-light" type="submit" name="pomodoro" id="down5">- 5 min</button>
-            <button class="btn waves-effect waves-light" type="submit" name="pomodoro" id="pomodoroPause">Pauza</button>
+            <!-- <button class="btn waves-effect waves-light" type="submit" name="pomodoro" id="pomodoroPause">Pauza</button> -->
         </div>
 
     </div>  
