working on curve

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <li><a href="pytania.html">Pytania</a></li>
                 <li><a href="licznik.html">Licznik</a></li>
                 <li><a href="pomodoro.html">Pomodoro</a></li>
+                <li><a href="curve.html">Krzywa Zapominania</a></li>
                 <li><a href="kontakt.html">Kontakt</a></li>
                 </ul>
             </div>
@@ -34,6 +35,7 @@
             <li><a href="pytania.html">Pytania</a></li>
             <li><a href="licznik.html">Licznik</a></li>
             <li><a href="pomodoro.html">Pomodoro</a></li>
+            <li><a href="curve.html">Krzywa Zapominania</a></li>
             <li><a href="kontakt.html">Kontakt</a></li>
         </ul>
 
