--- a/pomodoro.html
+++ b/pomodoro.html
@@ -26,6 +26,7 @@
                 <li><a href="pytania.html">Pytania</a></li>
                 <li><a href="licznik.html">Licznik</a></li>
                 <li><a href="pomodoro.html">Pomodoro</a></li>
+                <li><a href="curve.html">Krzywa Zapominania</a></li>
                 <li><a href="kontakt.html">Kontakt</a></li>
                 </ul>
             </div>
@@ -35,6 +36,7 @@
             <li><a href="pytania.html">Pytania</a></li>
             <li><a href="licznik.html">Licznik</a></li>
             <li><a href="pomodoro.html">Pomodoro</a></li>
+            <li><a href="curve.html">Krzywa Zapominania</a></li>
             <li><a href="kontakt.html">Kontakt</a></li>
         </ul>
 
