--- a/pytania.html
+++ b/pytania.html
@@ -25,6 +25,7 @@
                 <li><a href="pytania.html">Pytania</a></li>
                 <li><a href="licznik.html">Licznik</a></li>
                 <li><a href="pomodoro.html">Pomodoro</a></li>
+                <li><a href="curve.html">Krzywa Zapominania</a></li>  
                 <li><a href="kontakt.html">Kontakt</a></li>
                 </ul>
             </div>
@@ -33,7 +34,8 @@
         <ul class="sidenav" id="mobile-demo">
             <li><a href="pytania.html">Pytania</a></li>
             <li><a href="licznik.html">Licznik</a></li>
-            <li><a href="pomodoro.html">Pomodoro</a></li>     
+            <li><a href="pomodoro.html">Pomodoro</a></li>  
+            <li><a href="curve.html">Krzywa Zapominania</a></li>   
             <li><a href="kontakt.html">Kontakt</a></li>
         </ul>
 
