--- a/curve.html
+++ b/curve.html
@@ -45,7 +45,10 @@
             <input type="text" placeholder="Wprowadź nauczoną partię materiału. (Np. ALS)" id="curveTask" required>
             <button class="btn waves-effect waves-light" type="submit" name="action" id="curveAdd">
                 Dodaj
-            </button>
+            </button><br><br><br>
+            <ul id="curveList">
+                <li></li>
+            </ul>
         </div>
         
 
