--- a/pomodoro.html
+++ b/pomodoro.html
@@ -46,6 +46,7 @@
             <button class="btn waves-effect waves-light" type="submit" name="pomodoro" id="pomodoroStart">Pomodoro</button>
             <button class="btn waves-effect waves-light" type="submit" name="pomodoro" id="up5">+ 5 min</button>
             <button class="btn waves-effect waves-light" type="submit" name="pomodoro" id="down5">- 5 min</button>
+            <button class="btn waves-effect waves-light" type="submit" name="pomodoro" id="pomodoroPause">Pauza</button>
             <!-- <button class="btn waves-effect waves-light" type="submit" name="pomodoro" id="pomodoroPause">Pauza</button> -->
         </div>
 
