--- a/pytania.html
+++ b/pytania.html
@@ -51,6 +51,7 @@
                 <!-- <a href="#!" class="collection-item" id="interna">Interna</a> -->
                 <a href="#!" class="collection-item" id="Pediatria">Pediatria</a> 
                 <a href="#!" class="collection-item" id="ginekologia">Ginekologia</a>
+                <a href="#!" class="collection-item" id="LEK2013W">LEK 2013 Wiosna</a>
             </div>
         </div>
 
