loading tasks from few json files

--- a/pytania.html
+++ b/pytania.html
@@ -46,12 +46,19 @@
         </div>
       
         <div class="choose">
-            <div class="collection">
-                <a href="#!" class="collection-item" id="ratunkowa">Medycyna Ratunkowa</a>
-                <!-- <a href="#!" class="collection-item" id="interna">Interna</a> -->
-                <a href="#!" class="collection-item" id="Pediatria">Pediatria</a> 
-                <a href="#!" class="collection-item" id="ginekologia">Ginekologia</a>
-                <a href="#!" class="collection-item" id="LEK2013W">LEK 2013 Wiosna</a>
+            <div>
+                <a>Pytania autorskie:</a>
+                <ul class="collection">
+                    <li><a href="#!" class="collection-item" id="ratunkowa">Medycyna Ratunkowa</a></li>
+                    <!-- <a href="#!" class="collection-item" id="interna">Interna</a> -->
+                    <li><a href="#!" class="collection-item" id="pediatria">Pediatria</a> </li>
+                    <li><a href="#!" class="collection-item" id="ginekologia">Ginekologia</a></li>
+                </ul>
+                <br><br>
+                <a>Pytania z Lekarskiego Egzaminu Końcowego: </a>
+                <ul class="collection">
+                    <li><a href="#!" class="collection-item" id="LEK2013W">LEK 2013 Wiosna</a></li>
+                </ul>
             </div>
         </div>
 
