--- a/pomodoro.html
+++ b/pomodoro.html
@@ -47,7 +47,7 @@
             <button class="btn waves-effect waves-light" type="submit" name="pomodoro" id="up5">+ 5 min</button>
             <button class="btn waves-effect waves-light" type="submit" name="pomodoro" id="down5">- 5 min</button>
             <button class="btn waves-effect waves-light" type="submit" name="pomodoro" id="pomodoroPause">Pauza</button>
-            <!-- <button class="btn waves-effect waves-light" type="submit" name="pomodoro" id="pomodoroPause">Pauza</button> -->
+            <button class="btn waves-effect waves-light red" type="submit" name="pomodoro" id="pomodoroReset">Reset</button>
         </div>
 
     </div>  
