--- a/pytania.html
+++ b/pytania.html
@@ -50,13 +50,34 @@
                 <a>Pytania autorskie:</a>
                 <ul class="collection">
                     <li><a href="#!" class="collection-item" id="ratunkowa">Medycyna Ratunkowa</a></li>
-                    <!-- <a href="#!" class="collection-item" id="interna">Interna</a> -->
+                    <!-- <li><a href="#!" class="collection-item" id="interna">Interna</a></li>
+                    <div class="internaCategories">
+                        <p>
+                            <label>
+                                <input type="checkbox"/>
+                                <span>Bloki przedsionkowo komorowe</span>
+                            </label>
+                        </p>
+                        <p>
+                            <label>
+                                <input type="checkbox"/>
+                                <span>Cukrzyca</span>
+                            </label>
+                        </p>
+                        <p>
+                            <label>
+                                <input type="checkbox"/>
+                                <span>Dna moczanowa</span>
+                            </label>
+                        </p>
+                    </div> -->
                     <li><a href="#!" class="collection-item" id="pediatria">Pediatria</a> </li>
                     <li><a href="#!" class="collection-item" id="ginekologia">Ginekologia</a></li>
                 </ul>
                 <br><br>
                 <a>Pytania z Lekarskiego Egzaminu Końcowego: </a>
                 <ul class="collection">
+                    <li><a href="#!" class="collection-item" id="LEK2012J">LEK 2012 Jesień</a></li>
                     <li><a href="#!" class="collection-item" id="LEK2013W">LEK 2013 Wiosna</a></li>
                 </ul>
             </div>
